--- a/src/main/resources/templates/funcionario.html
+++ b/src/main/resources/templates/funcionario.html
@@ -115,7 +115,7 @@
                 Criação de Perfil
               </div>
               <div class="card-body ">
-                  <form th:action="@{/salva-pessoa}" th:object="${funcionario}" method="post">
+                  <form th:action="@{/salva-perfil}" th:object="${funcionario}" method="post">
                     <div class="row">
                       
                       <div class="col-md-6 px-3">
@@ -223,18 +223,18 @@
                       </tr>
                     </thead>
                     <tbody>
-                      <tr  th:each="pessoa : ${pessoas}">
-                        <th data-label="Código" scope="row"><span th:utext="${pessoa.codigo}"></span></th>
-                        <td data-label="Nome"><span th:utext="${pessoa.nome}"></span></td>
-                        <td data-label="Email"><span th:utext="${pessoa.email}"></span></td>
-                        <td data-label="Estado" class="text-center"><span th:utext="${pessoa.estado}"></span></td>
-                        <td data-label="Telefone" style="word-break: keep-all; white-space: nowrap;"><span th:utext="${pessoa.telefone}"></span></td>
+                      <tr  th:each="perfil : ${perfils}">
+                        <th data-label="Código" scope="row"><span th:utext="${perfil.codigo}"></span></th>
+                        <td data-label="Nome"><span th:utext="${perfil.nome}"></span></td>
+                        <td data-label="Email"><span th:utext="${perfil.email}"></span></td>
+                        <td data-label="Estado" class="text-center"><span th:utext="${perfil.estado}"></span></td>
+                        <td data-label="Telefone" style="word-break: keep-all; white-space: nowrap;"><span th:utext="${perfil.telefone}"></span></td>
                         <td data-label="Registro">
                           <form>
                             <div class="row">
                               <div class="col-sm-10" >
                                 <div class="form-group">
-                                    <input style="cursor: text" type="password" class="form-control" placeholder="Registro"  th:value="${pessoa.registro}" id="myInput" readonly="readonly">
+                                    <input style="cursor: text" type="password" class="form-control" placeholder="Registro"  th:value="${perfil.registro}" id="myInput" readonly="readonly">
                                 </div>
                               </div>
                                  <div class="col-sm-2" style="justify-content: center; align-items: center;">
@@ -247,15 +247,15 @@
                         </td>
 
                         <td data-label="Editar" class="row-adjustments-line">
-                          <a th:href="@{/editar/{codigo}(codigo=${pessoa.codigo})}" class="btn btn-primary col-md-5" style="background-color: #003e7e; color: white">
+                          <a th:href="@{/editar/{codigo}(codigo=${perfil.codigo})}" class="btn btn-primary col-md-5" style="background-color: #003e7e; color: white">
                             <i class="fa fa-edit" aria-hidden="true"></i>
                           </a>
-                          <a th:href="@{/delete_usuario(codigo=${pessoa.codigo})}" style="color: white!important;"  class="btn btn-danger col-md-5">
+                          <a th:href="@{/delete_usuario(codigo=${perfil.codigo})}" style="color: white!important;"  class="btn btn-danger col-md-5">
                               <i class="fa fa-trash" aria-hidden="true"></i>
                           </a>
                         </td>
                       </tr>
-                      <tr th:if="${pessoas.empty}">
+                      <tr th:if="${perfils.empty}">
                           <div class="alert alert-info mt-4">
                             <span><b> Info - </b> Nenhum perfil cadastrado!</span>
                           </div>
