--- a/src/main/resources/templates/pages/admin/admin-tarefas.html
+++ b/src/main/resources/templates/pages/admin/admin-tarefas.html
@@ -46,7 +46,7 @@
                     </div>
                     <div class="form-group col-md-8 nopadding">
                         <label for="inputUsuario"> ID Usuário</label>
-                        <input type="text" class="form-control" id="inputUsuario" placeholder="Usuário" name="pessoa">
+                        <input type="text" class="form-control" id="inputUsuario" placeholder="Usuário" name="perfil">
                     </div>
                     <div class="form-group col-md-4 nopadding">
                         <label for="inputDate">Data Validade</label>
@@ -78,7 +78,7 @@
                     <td data-label="Assunto"><span th:utext="${tarefa.assunto}"></span></td>
                     <td	data-label="Descrição"><span th:utext="${tarefa.descricao}"></span></td>
                     <td	data-label="Data Vencimento"><span th:utext="${tarefa.dataVencimento}"></span></td>
-                    <td	data-label="Usuario"><span th:utext="${tarefa.pessoa.nome}"></span></td>
+                    <td	data-label="Usuario"><span th:utext="${tarefa.perfil.nome}"></span></td>
                     <td data-label="Editar" class="row">
                         <a th:href="@{/delete_tarefa(codigo=${tarefa.codigo})}" th:method="delete">
                             <button type="button" class="btn btn-danger btn-xs btn-block btn-active col-md-6">
@@ -119,7 +119,7 @@
                                                     </div>
                                                     <div class="form-group col-md-8 nopadding">
                                                         <label for="inputUsuarioMD"> ID Usuário</label>
-                                                        <input type="text" class="form-control" id="inputUsuarioMD" placeholder="Usuário" name="pessoa" th:value="${tarefa.pessoa.codigo}">
+                                                        <input type="text" class="form-control" id="inputUsuarioMD" placeholder="Usuário" name="perfil" th:value="${tarefa.perfil.codigo}">
                                                     </div>
                                                     <div class="form-group col-md-4 nopadding">
                                                         <label for="inputDateMD">Data Validade</label>
