--- a/src/main/resources/templates/investimento.html
+++ b/src/main/resources/templates/investimento.html
@@ -26,10 +26,10 @@
     <div class="sidebar" data-color="orange">
 
       <div class="logo">
-       <a href="http://www.creative-tim.com" class="simple-text logo-mini"> 
+        <a class="simple-text logo-mini">
           FT
         </a>
-       <a href="http://www.creative-tim.com" class="simple-text logo-normal"> 
+        <a class="simple-text logo-normal">
           FORTUNE
         </a>
       </div>
