update login and register

--- a/src/main/resources/templates/despesa.html
+++ b/src/main/resources/templates/despesa.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+>
 
 <head>
   <meta charset="utf-8" />
@@ -172,9 +172,9 @@
                 Cadastrar Despesa
               </div>
               <div class="card-body ">
-                  <form th:action="@{/salva-despesa}" th:object="${despesa}" method="post">
+                  <form th:action="@{/home-despesa/salva-despesa}" th:object="${despesa}" method="post">
                     <div class="row">
-                      
+
                       <div class="col-md-6 px-3">
                         <div class="form-group">
                           <label>Nome</label>
@@ -281,11 +281,13 @@
                         <td data-label="Valor">R$ <span th:utext="${despesa.valor}"></span></td>
                         <td data-label="Data"><span  th:utext="${despesa.dataVencimento}"></span></td>
                         <td data-label="Editar" class="row-adjustments-line">
-                          <a th:href="@{/editar-despesa/{codigo}(codigo=${despesa.codigo})}" class="btn btn-primary col-md-5" style="background-color: #003e7e; color: white">
+                          <a th:href="@{/home-despesa/editar-despesa/{codigo}(codigo=${despesa.codigo})}"
+                             class="btn btn-primary col-md-5" style="background-color: #003e7e; color: white">
                             <i class="fa fa-edit" aria-hidden="true"></i>
                           </a>
-                          <a th:href="@{/delete_despesa(codigo=${despesa.codigo})}" style="color: white!important;"  class="btn btn-danger col-md-5">
-                              <i class="fa fa-trash" aria-hidden="true"></i>
+                          <a th:href="@{/home-despesa/delete_despesa(codigo=${despesa.codigo})}"
+                             style="color: white!important;" class="btn btn-danger col-md-5">
+                            <i class="fa fa-trash" aria-hidden="true"></i>
                           </a>
                         </td>
                       </tr>
@@ -330,10 +332,12 @@
                       <td data-label="Valor">R$ <span th:utext="${despesa.valor}"></span></td>
                       <td data-label="Data"><span  th:utext="${despesa.dataVencimento}"></span></td>
                       <td data-label="Editar" class="row-adjustments-line">
-                        <a th:href="@{/editar-despesa/{codigo}(codigo=${despesa.codigo})}" class="btn btn-primary col-md-5" style="background-color: #003e7e; color: white">
+                        <a th:href="@{/home-despesa/editar-despesa/{codigo}(codigo=${despesa.codigo})}"
+                           class="btn btn-primary col-md-5" style="background-color: #003e7e; color: white">
                           <i class="fa fa-edit" aria-hidden="true"></i>
                         </a>
-                        <a th:href="@{/delete_despesa(codigo=${despesa.codigo})}" style="color: white!important;"  class="btn btn-danger col-md-5">
+                        <a th:href="@{/home-despesa/delete_despesa(codigo=${despesa.codigo})}"
+                           style="color: white!important;" class="btn btn-danger col-md-5">
                           <i class="fa fa-trash" aria-hidden="true"></i>
                         </a>
                       </td>
@@ -378,10 +382,12 @@
                       <td data-label="Valor">R$ <span th:utext="${despesa.valor}"></span></td>
                       <td data-label="Data"><span  th:utext="${despesa.dataVencimento}"></span></td>
                       <td data-label="Editar" class="row-adjustments-line">
-                        <a th:href="@{/editar-despesa/{codigo}(codigo=${despesa.codigo})}" class="btn btn-primary col-md-5" style="background-color: #003e7e; color: white">
+                        <a th:href="@{/home-despesa/editar-despesa/{codigo}(codigo=${despesa.codigo})}"
+                           class="btn btn-primary col-md-5" style="background-color: #003e7e; color: white">
                           <i class="fa fa-edit" aria-hidden="true"></i>
                         </a>
-                        <a th:href="@{/delete_despesa(codigo=${despesa.codigo})}" style="color: white!important;"  class="btn btn-danger col-md-5">
+                        <a th:href="@{/home-despesa/delete_despesa(codigo=${despesa.codigo})}"
+                           style="color: white!important;" class="btn btn-danger col-md-5">
                           <i class="fa fa-trash" aria-hidden="true"></i>
                         </a>
                       </td>
@@ -428,10 +434,12 @@
                       <td data-label="Valor">R$ <span th:utext="${despesa.valor}"></span></td>
                       <td data-label="Data"><span  th:utext="${despesa.dataVencimento}"></span></td>
                       <td data-label="Editar" class="row-adjustments-line">
-                        <a th:href="@{/editar-despesa/{codigo}(codigo=${despesa.codigo})}" class="btn btn-primary col-md-5" style="background-color: #003e7e; color: white">
+                        <a th:href="@{/home-despesa/editar-despesa/{codigo}(codigo=${despesa.codigo})}"
+                           class="btn btn-primary col-md-5" style="background-color: #003e7e; color: white">
                           <i class="fa fa-edit" aria-hidden="true"></i>
                         </a>
-                        <a th:href="@{/delete_despesa(codigo=${despesa.codigo})}" style="color: white!important;"  class="btn btn-danger col-md-5">
+                        <a th:href="@{/home-despesa/delete_despesa(codigo=${despesa.codigo})}"
+                           style="color: white!important;" class="btn btn-danger col-md-5">
                           <i class="fa fa-trash" aria-hidden="true"></i>
                         </a>
                       </td>
