Tela Login butão sair

--- a/src/main/resources/templates/despesa.html
+++ b/src/main/resources/templates/despesa.html
@@ -70,6 +70,12 @@
               <p>Relatório</p>
             </a>
           </li>
+          <li class="active-pro">
+            <a th:href="@{/logout}">
+              <i class="now-ui-icons arrows-1_minimal-left"></i>
+              <p>Sair</p>
+            </a>
+          </li>
         </ul>
       </div>
     </div>
