--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,81 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="ISO-8859-1">
-    <title>Registration and Login App</title>
-
-    <link rel="stylesheet"
-          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-          crossorigin="anonymous">
-
+    <title>Fortune | Login</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="../static/css/login.css" th:href="@{/css/login.css}" rel="stylesheet"/>
 </head>
 <body>
-
-<!-- create navigation bar ( header) -->
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed"
-                    data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-                    aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span> <span
-                    class="icon-bar"></span> <span class="icon-bar"></span> <span
-                    class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#" th:href="@{/}">Registration and
-                Login Module</a>
-        </div>
-    </div>
-</nav>
-
-<br>
-<br>
 <div class="container">
-    <div class="row">
-        <div class="col-md-6 col-md-offset-3">
+    <form name="form1" class="box" th:action="@{/login}" method="post">
+        <h4>Fortune<span> | Login</span></h4>
 
-            <h1> User Login Page </h1>
-            <form th:action="@{/login}" method="post">
+        <input type="text" name="username" placeholder="Usuario">
+        <input type="password" name="password" placeholder="Senha">
+        <span>Novo usuario? <a href="/" th:href="@{/registration}">Cadastre-se</a></span>
 
-                <!-- error message -->
-                <div th:if="${param.error}">
-                    <div class="alert alert-danger">Invalid username or
-                        password.
-                    </div>
-                </div>
+        <button type="submit" class="btn1">Acessar</button>
+    </form>
+</div>
 
-                <!-- logout message -->
-                <div th:if="${param.logout}">
-                    <div class="alert alert-info">You have been logged out.</div>
-                </div>
 
-                <div class="form-group">
-                    <label for="username"> Username </label> :
-                    <input type="text" class="form-control" id="username" name="username"
-                           placeholder="Enter Email ID" autofocus="autofocus">
-                </div>
+<div th:if="${param.error}">
+    <div class="alert alert-primary position-absolute top-0 end-0 mr-3 mt-3"  role="alert">
+        Senha ou usuario invalido!
+    </div>
+</div>
 
-                <div class="form-group">
-                    <label for="password">Password</label>: <input type="password"
-                                                                   id="password" name="password" class="form-control"
-                                                                   placeholder="Enter Password"/>
-                </div>
-
-                <div class="form-group">
-                    <div class="row">
-                        <div class="col-sm-6 col-sm-offset-3">
-                            <input type="submit" name="login-submit" id="login-submit"
-                                   class="form-control btn btn-primary" value="Log In"/>
-                        </div>
-                    </div>
-                </div>
-            </form>
-            <div class="form-group">
-						<span>New user? <a href="/" th:href="@{/registration}">Register
-								here</a></span>
-            </div>
-        </div>
+<div th:if="${param.logout}">
+    <div class="alert alert-primary position-absolute top-0 end-0 translate-middle mr-3 mt-3" role="alert">
+        Realize o Login de acesso!
     </div>
 </div>
 </body>
